[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/mesh_creator/ui/FaceProperties.gd" type="Script" id=1]

[node name="FaceProperties" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -297.0
margin_bottom = -571.0
script = ExtResource( 1 )

[node name="Items" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = 267.0
margin_bottom = -99.0

[node name="lbl_FaceMeshId" type="Label" parent="Items"]
margin_top = 5.0
margin_right = 149.0
margin_bottom = 19.0
text = "Face Mesh ID: {face_id}"

[node name="lbl_FaceVtxCount" type="Label" parent="Items"]
margin_left = 153.0
margin_top = 5.0
margin_right = 305.0
margin_bottom = 19.0
text = "Vertices: {vertex_count}"

[node name="lbl_FacePos" type="Label" parent="Items"]
margin_left = 309.0
margin_top = 5.0
margin_right = 361.0
margin_bottom = 19.0
text = "Position"

[node name="inp_FacePosX" type="SpinBox" parent="Items"]
margin_left = 365.0
margin_right = 439.0
margin_bottom = 24.0
step = 0.001
allow_greater = true
allow_lesser = true

[node name="inp_FacePosY" type="SpinBox" parent="Items"]
margin_left = 443.0
margin_right = 517.0
margin_bottom = 24.0
step = 0.001
allow_greater = true
allow_lesser = true

[node name="inp_FacePosZ" type="SpinBox" parent="Items"]
margin_left = 521.0
margin_right = 595.0
margin_bottom = 24.0
step = 0.001
allow_greater = true
allow_lesser = true
